--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,8 @@
 // Подключение переменных
-@import 'variables'
-    // Подключение базовых настроек
-@import 'settings'
+@import '_variables'
+// Подключение базовых настроек
+@import '_settings'
 // Подключение normalize
-@import  'normalize'
+@import '_normalize'
 // Стили для блока header
 @import 'blocks/_header'
